# eu4_translation_helper

./: .gitignore  README.md  eu4th_build.spec  pyproject.toml
docs/: BUILD_EXE.md
src/: __main__.py  commands.py  config_utils.py  defines.py  eu4_translation_helper.py  file_utils.py  ui.py
src/eu4th/: __main__.py  cli.py  commands.py  config_utils.py  defines.py  file_utils.py  gui.py  gui_helpers.py  models.py  project.py  ui.py
src/eu4th/gui/: create_project.py  gui_helpers.py  import_project.py  main.py  project_view.py  projects_overview.py
src/eu4th/templates/: index.html
src/templates/: config.html.j2
